--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,25 @@
   </head>
   <body>
     <div id="root"></div>
-    <!-- <script src="./data/injuries/injuries.js"></script> -->
-    <!-- <script src="./data/pokemon/pokemon.js"></script> -->
-    <!-- <script src="./data/steam/steam.js"></script> -->
-    <!-- <script src="./data/worldbank/worldbank.js"></script> -->
-    <!-- <script src="./data/lol/lol.js"></script> -->
+<header>
+<p>POKEMON</p>
+</header>
+
+<select>
+
+  
+</select>
+<div id="contenido">
+
+  </div>
+
+<footer>
+<p>Pie de Pagina</p>
+</footer>
+    
+
+    <script src="./data/pokemon/pokemon.js"></script>
+   
     <script src="data.js"></script>
     <script src="main.js"></script>
   </body>
