Modificacionn en HTML encabezado

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
 <header>
 <p>POKEMON</p>
 </header>
+<div class="contenedor"> 
+  <h1>POKEMON</h1>
+  <input type="checkbox" id="menu">
+  <label for="menu"></label>
 
+</div>
   <div id="contenido">
   
   </div>
