Ultima modificacion de index.html

--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,14 @@
   </head>
   <body>
     <div id="root"></div>
-<header>
-<p>POKEMON</p>
-</header>
+
 <div class="contenedor"> 
   <h1>POKEMON</h1>
   <input type="checkbox" id="menu">
-  <label for="menu"></label>
+  <label class="" for="menu"></label>
+<ul href="">Hierba</ul>
+<ul href="">Veneno</ul>
+
 
 </div>
   <div id="contenido">
