Subiendo test de formula de data, filtrado de data, orden de data, formula de calculo de cuantos tipos de pokemones hay

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width", initial-scale=" 1.0">
+    <meta name="viewport" content="width=device-width" initial-scale=" 1.0">
     <title>Poké-Easy</title>
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
@@ -77,25 +77,25 @@
           </p>
        
       </main>
-      <aside class="sidebar">
+      <!-- <aside class="sidebar">
         <h4>¿Cuántos Pokemon de cada tipo hay en la region Kanto?
           <p>
             <input type="button" value="Genera una tabla" onclick="genera_tabla()">
           </p>
       
         </h4>
-      </aside>
-      <source class="source1">
-        <!----video src="imagenes-pokemon/intropokemon.mp4"></video-->
+      </aside> -->
+      <!-- <source class="source1">
+        --video src="imagenes-pokemon/intropokemon.mp4"></video
       </source>
 
       <source class="source2">
-        <!-- <img src="imagenes-pokemon/pokemon-1.jpg" alt="pokemon-caricatura"> </img> -->
+        <img src="imagenes-pokemon/pokemon-1.jpg" alt="pokemon-caricatura"> </img>
       </source>
 
       <source class="source3">
-        <!-- <img src="imagenes-pokemon/pokemon_5.jpeg" alt="region-kanto"> </img> -->
-      </source>
+        <img src="imagenes-pokemon/pokemon_5.jpeg" alt="region-kanto"> </img>
+      </source> -->
 
       <footer class="footer">
           <p>PIE DE PAGINA</p><br>
@@ -160,11 +160,11 @@
 
 
 
-    <section class="row">
+    <section class="row"></section>
     <script src="./data/pokemon/pokemon.js"></script>
    
     <script src="data.js"></script>
-    <script src="main.js"></script>
+    <!-- <script src="main.js"></script> -->
   
   </body>
 </html>
