subiendo cambios en diseño primera pagina

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
     <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
+    <link rel="icon" href="imagenes-pokemon/pokebola.png">
     <link rel="stylesheet" href="grid.css" />
   </head>
 
@@ -14,6 +15,12 @@
     <div class="contenedor"> 
       <header class="header">
           <h2><img src="imagenes-pokemon/img-08.png" alt="logo pokemon"></h2>
+          <nav>
+            <ul>
+              <a href="#header"><li>Inicio</li></a>
+              <a href="cards.html"><li>Pokedex</li></a>
+            </ul>
+          </nav>
       </header>
 
       <map class="map">
@@ -22,7 +29,7 @@
 
       <div class="widget">
           <img src="imagenes-pokemon/pokedex1.png" alt="pokedex" id="pokedex">
-          <button onclick="location.href='index2.html'">Entrar a  POKEDEX</button>
+          <button onclick="location.href='cards.html'">Entrar a  POKEDEX</button>
           </div>
 
       <main class="contenido">
